--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 *.class
 *.log
 
+# eclipse specific
+.cache-main
+.cache-tests
+.classpath
+.project
+.settings
+
 # sbt specific
 .cache
 .history
@@ -11,6 +18,10 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+project/target
+
+# activator
+libexec
 
 # Scala-IDE specific
 .scala_dependencies
