A mess, but slick persistence is in here.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ src_managed/
 project/boot/
 project/plugins/project/
 project/target
+project/.sbtserver
+project/.sbtserver.lock
+project/sbt-ui.sbt
 
 # activator
 libexec
