Abstracted the datasources.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,11 +2,24 @@ akka {
   loglevel = INFO
 }
 
-mqttdb = {
-  driver = org.postgresql.Driver
-  url = "jdbc:postgresql://pi2b.local/mqtt"
-  user = "mqtt"
-  password = "weak-MQTT-pw"
-  connectionPool=disabled
-  keepAliverConnection = true
+mqttPSQLds = {
+  driver = "slick.driver.PostgresDriver$"
+  db {
+    url = "jdbc:postgresql://pi2b.local/mqtt"
+    driver = org.postgresql.Driver
+    user = "mqtt"
+    password = "weak-MQTT-pw"
+    connectionPool = disabled
+    keepAliveConnection = true
+  }
+}
+
+mqttH2ds = {
+  driver = "slick.driver.H2Driver$"
+  db {
+    url = "jdbc:h2:mem:mqtt"
+    driver = org.h2.driver
+    connectionPool = disabled
+    keepAliveConnection = true
+  }
 }
