Added H2 and SQLite options

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,7 +18,17 @@ mqttH2ds = {
   driver = "slick.driver.H2Driver$"
   db {
     url = "jdbc:h2:mem:mqtt"
-    driver = org.h2.driver
+    driver = org.h2.Driver
+    connectionPool = disabled
+    keepAliveConnection = true
+  }
+}
+
+mqttSQLiteds = {
+  driver = "slick.driver.SQLiteDriver$"
+  db {
+    url = "jdbc:sqlite:mqtt-sqlite.db"
+    driver = "org.sqlite.JDBC"
     connectionPool = disabled
     keepAliveConnection = true
   }
